lib_LTLIBRARIES = libopensat.la
libopensat_la_SOURCES = \
                        cNoradBase.cpp \
                        cOrbit.cpp \
                        cVector.cpp \
                        stdafx.cpp \
                        cEci.cpp \
                        cNoradSDP4.cpp \
                        cSite.cpp \
                        coord.cpp \
                        cJulian.cpp \
                        cNoradSGP4.cpp \
                        cTLE.cpp \
                        globals.cpp

